--- a/package.json
+++ b/package.json
@@ -22,8 +22,9 @@
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "pg": "^8.8.0",
+    "pg": "~7.14",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.25.8"
   }
