--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "pg": "~7.14",
+    "mysql2": "^2.3.3",
+    "pg": "^8.8.0",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.25.8"
   }
