--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "node": ">=14"
   },
   "dependencies": {
+    "axios": "^1.2.0",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
